// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#4AD8DA",
      "borderRadius": 33.75,
      "height": 90,
      "justifyContent": "center",
      "transform": [
        {
          "scale": 1,
        },
      ],
      "width": "100%",
    }
  }
  testID="undefined"
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontFamily": "FC Subject [Non-commercial] Bd",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 22.4,
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
  >
    Press Me
  </Text>
</View>
`;

exports[`Button Component renders correctly when disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#4AD8DA",
      "borderRadius": 33.75,
      "height": 90,
      "justifyContent": "center",
      "transform": [
        {
          "scale": 1,
        },
      ],
      "width": "100%",
    }
  }
  testID="undefined"
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontFamily": "FC Subject [Non-commercial] Bd",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 22.4,
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
  >
    Press Me
  </Text>
</View>
`;
